--- a/index.html
+++ b/index.html
@@ -174,11 +174,10 @@
   authDomain: "laylahomeschool-77ac4.firebaseapp.com",
   projectId: "laylahomeschool-77ac4",
   storageBucket: "laylahomeschool-77ac4.firebasestorage.app",
-  messagingSenderId: "491842629315",
-  appId: "1:491842629315:web:8644c66d1cde1b734fbc76",
+  messagingSenderId: "491842629315" 
   measurementId: "G-FXT963GPZ9"
 };
-                appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+                appId: "1:491842629315:web:8644c66d1cde1b734fbc76",
                 const app = initializeApp(firebaseConfig);
                 db = getFirestore(app);
                 auth = getAuth(app);
