--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
   projectId: "laylahomeschool-77ac4",
   storageBucket: "laylahomeschool-77ac4.firebasestorage.app",
   messagingSenderId: "491842629315" 
+  appId: "1:491842629315:web:8644c66d1cde1b734fbc76",
   measurementId: "G-FXT963GPZ9"
 };
                 appId: "1:491842629315:web:8644c66d1cde1b734fbc76",
