--- a/parent-dashboard.html
+++ b/parent-dashboard.html
@@ -8,46 +8,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        .day-card { min-height: 200px; }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
     <header class="bg-white shadow-sm">
         <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold leading-tight text-gray-900">Layla's Homeschool Dashboard</h1>
+            <h1 class="text-2xl sm:text-3xl font-bold leading-tight text-gray-900">Layla's Homeschool Dashboard</h1>
         </div>
     </header>
 
-    <main class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
-        <!-- Tracking ID Input -->
-        <div class="bg-white p-6 rounded-lg shadow mb-8">
-            <h2 class="text-2xl font-bold mb-4">Track Progress</h2>
-            <p class="text-gray-600 mb-4">Enter the "Tracking ID" from Layla's website to load her progress and schedule.</p>
-            <div class="flex items-center space-x-2">
-                <input type="text" id="tracking-id-input" placeholder="Enter Tracking ID..." class="flex-grow p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
-                <button id="load-data-btn" class="bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md hover:bg-indigo-700 transition">Load Data</button>
+    <main class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+        <div class="bg-white p-4 sm:p-6 rounded-lg shadow mb-8">
+            <h2 class="text-xl sm:text-2xl font-bold mb-4">Track Progress</h2>
+            <p class="text-gray-600 mb-4">Enter Layla's Tracking ID to load her progress and schedule.</p>
+            <div class="flex flex-col sm:flex-row items-center gap-2">
+                <input type="text" id="tracking-id-input" placeholder="Enter Tracking ID..." class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
+                <button id="load-data-btn" class="w-full sm:w-auto bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md hover:bg-indigo-700 transition">Load Data</button>
             </div>
         </div>
 
-        <!-- Hidden until data is loaded -->
         <div id="dashboard-content" class="hidden">
-            <!-- Progress Report Section -->
             <div class="mb-8">
-                <h2 class="text-2xl font-bold mb-4">Progress Report</h2>
-                <div id="progress-report-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                    <!-- Progress cards will be injected here -->
+                <h2 class="text-xl sm:text-2xl font-bold mb-4">Progress Report</h2>
+                <div id="progress-report-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 sm:gap-6">
                     <div class="text-center p-6 bg-white rounded-lg shadow">Loading progress...</div>
                 </div>
             </div>
 
-            <!-- Lesson Plan & Schedule Section -->
             <div>
-                <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-2xl font-bold">Weekly Lesson Plan</h2>
-                    <button id="save-schedule-btn" class="bg-green-600 text-white font-semibold py-2 px-5 rounded-md hover:bg-green-700 transition">Save Schedule</button>
+                <div class="flex flex-col sm:flex-row justify-between sm:items-center mb-4 gap-4">
+                    <h2 class="text-xl sm:text-2xl font-bold">Weekly Lesson Plan</h2>
+                    <button id="save-schedule-btn" class="w-full sm:w-auto bg-green-600 text-white font-semibold py-3 px-5 rounded-md hover:bg-green-700 transition">Save Schedule</button>
                 </div>
-                <div id="schedule-container" class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-6">
+                <div id="schedule-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6">
                     <!-- Day cards will be injected here -->
                 </div>
                  <p id="save-feedback" class="text-center mt-4 text-lg text-green-700 font-medium"></p>
@@ -72,13 +66,7 @@
         };
         appId = "laylahomeschool-77ac4";
 
-        try {
-            const app = initializeApp(firebaseConfig);
-            db = getFirestore(app);
-        } catch (e) {
-            console.error("Firebase init failed", e);
-            alert("Could not connect to the database.");
-        }
+        try { const app = initializeApp(firebaseConfig); db = getFirestore(app); } catch (e) { console.error("Firebase init failed", e); alert("Could not connect to the database."); }
 
         const loadDataBtn = document.getElementById('load-data-btn');
         const trackingIdInput = document.getElementById('tracking-id-input');
@@ -89,10 +77,7 @@
 
         loadDataBtn.addEventListener('click', async () => {
             const trackingId = trackingIdInput.value.trim();
-            if (!trackingId) {
-                alert("Please enter a Tracking ID.");
-                return;
-            }
+            if (!trackingId) { alert("Please enter a Tracking ID."); return; }
             currentTrackingId = trackingId;
             dashboardContent.classList.remove('hidden');
             await loadProgress(trackingId);
@@ -108,24 +93,16 @@
                 const docRef = doc(db, `artifacts/${appId}/users/${trackingId}/progress`, subject);
                 const docSnap = await getDoc(docRef);
                 
-                let content = `<div class="bg-white p-5 rounded-lg shadow">
-                                <h3 class="font-bold text-xl capitalize mb-3">${subject.replace('-', ' ')}</h3>`;
-
+                let content = `<div class="bg-white p-4 rounded-lg shadow"><h3 class="font-bold text-lg capitalize mb-3">${subject.replace('-', ' ')}</h3>`;
                 if (docSnap.exists()) {
                     const data = docSnap.data();
                     content += '<ul class="space-y-2">';
                     for (const activity in data) {
                         const details = data[activity];
-                        content += `<li class="flex items-center text-gray-700">
-                                        <span class="text-green-500 mr-2">✔</span> 
-                                        ${activity} 
-                                        ${details.score !== undefined ? `(${details.score}/${details.total})` : ''}
-                                    </li>`;
+                        content += `<li class="flex items-center text-gray-700"><span class="text-green-500 mr-2">✔</span>${activity}${details.score !== undefined ? ` (${details.score}/${details.total})` : ''}</li>`;
                     }
                     content += '</ul>';
-                } else {
-                    content += '<p class="text-gray-500">No progress recorded yet.</p>';
-                }
+                } else { content += '<p class="text-gray-500">No progress yet.</p>'; }
                 content += `</div>`;
                 progressContainer.innerHTML += content;
             }
@@ -136,32 +113,18 @@
             const scheduleRef = doc(db, `artifacts/${appId}/users/${trackingId}/schedule`, 'weekly');
             const scheduleSnap = await getDoc(scheduleRef);
             const scheduleData = scheduleSnap.exists() ? scheduleSnap.data() : {};
-
             scheduleContainer.innerHTML = '';
             days.forEach(day => {
                 const plan = scheduleData[day] || '';
-                const dayCard = `
-                    <div class="day-card bg-white p-4 rounded-lg shadow">
-                        <h3 class="font-bold text-lg mb-2">${day}</h3>
-                        <textarea id="plan-${day}" class="w-full h-48 p-2 border border-gray-200 rounded-md resize-none">${plan}</textarea>
-                    </div>
-                `;
-                scheduleContainer.innerHTML += dayCard;
+                scheduleContainer.innerHTML += `<div class="day-card bg-white p-4 rounded-lg shadow"><h3 class="font-bold text-lg mb-2">${day}</h3><textarea id="plan-${day}" class="w-full h-40 p-2 border border-gray-200 rounded-md resize-none">${plan}</textarea></div>`;
             });
         }
         
         async function saveSchedule() {
-            if (!currentTrackingId) {
-                alert("Please load data with a tracking ID first.");
-                return;
-            }
+            if (!currentTrackingId) { alert("Please load data first."); return; }
             const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
             const scheduleData = {};
-            days.forEach(day => {
-                const textarea = document.getElementById(`plan-${day}`);
-                scheduleData[day] = textarea.value;
-            });
-
+            days.forEach(day => { scheduleData[day] = document.getElementById(`plan-${day}`).value; });
             const scheduleRef = doc(db, `artifacts/${appId}/users/${currentTrackingId}/schedule`, 'weekly');
             try {
                 await setDoc(scheduleRef, scheduleData);
@@ -170,11 +133,11 @@
                 setTimeout(() => feedbackEl.textContent = '', 3000);
             } catch (e) {
                 console.error("Error saving schedule:", e);
-                alert("Could not save the schedule. Please try again.");
+                alert("Could not save the schedule.");
             }
         }
-
     </script>
 </body>
 </html>
+
 
