--- a/parent-dashboard.html
+++ b/parent-dashboard.html
@@ -11,15 +11,13 @@
 <body class="bg-gray-100 text-gray-800">
 
     <header class="bg-white shadow-sm">
-        <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-2xl sm:text-3xl font-bold leading-tight text-gray-900">Layla's Homeschool Dashboard</h1>
-        </div>
+        <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8"><h1 class="text-2xl sm:text-3xl font-bold text-gray-900">Layla's Homeschool Dashboard</h1></div>
     </header>
 
     <main class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow mb-8">
             <h2 class="text-xl sm:text-2xl font-bold mb-4">Track Progress</h2>
-            <p class="text-gray-600 mb-4">Enter Layla's Tracking ID to load her progress and schedule.</p>
+            <p class="text-gray-600 mb-4">Enter Layla's Tracking ID to load her progress.</p>
             <div class="flex flex-col sm:flex-row items-center gap-2">
                 <input type="text" id="tracking-id-input" placeholder="Enter Tracking ID..." class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
                 <button id="load-data-btn" class="w-full sm:w-auto bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md hover:bg-indigo-700">Load Data</button>
@@ -27,32 +25,64 @@
         </div>
 
         <div id="dashboard-content" class="hidden">
-            <div class="mb-8">
-                 <h2 class="text-xl sm:text-2xl font-bold mb-4">Overall Engagement</h2>
-                <div class="bg-white p-6 rounded-lg shadow text-center">
-                    <h3 class="text-lg font-medium text-gray-500">Total Stars Earned</h3>
-                    <p id="total-stars-display" class="text-6xl font-bold text-yellow-500">0</p>
-                </div>
-            </div>
-
-            <div class="mb-8">
-                <h2 class="text-xl sm:text-2xl font-bold mb-4">Progress Report</h2>
-                <div id="progress-report-container" class="space-y-6"></div>
-            </div>
-            
-            <div>
-                <div class="flex flex-col sm:flex-row justify-between sm:items-center mb-4 gap-4">
-                    <h2 class="text-xl sm:text-2xl font-bold">Weekly Lesson Plan</h2>
-                    <button id="save-schedule-btn" class="w-full sm:w-auto bg-green-600 text-white font-semibold py-3 px-5 rounded-md hover:bg-green-700">Save Schedule</button>
-                </div>
-                <div id="schedule-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"></div>
-                <p id="save-feedback" class="text-center mt-4 text-lg text-green-700 font-medium"></p>
-            </div>
+            <div class="mb-8"><h2 class="text-xl sm:text-2xl font-bold mb-4">Overall Engagement</h2><div class="bg-white p-6 rounded-lg shadow text-center"><h3 class="text-lg font-medium text-gray-500">Total Stars Earned</h3><p id="total-stars-display" class="text-6xl font-bold text-yellow-500">0</p></div></div>
+            <div class="mb-8"><h2 class="text-xl sm:text-2xl font-bold mb-4">Progress Report</h2><div id="progress-report-container" class="space-y-6"></div></div>
         </div>
     </main>
-    
+
     <script type="module">
-        // --- Full script from previous response with star calculation logic added ---
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
+        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        import { curriculumData } from './curriculum.js';
+
+        let db, appId, currentTrackingId, progressData = {};
+        const firebaseConfig = { apiKey: "AIzaSyAfatIGx88HP1fH0_EGTr_zHpvNa1Rcg7k", authDomain: "laylahomeschool-77ac4.firebaseapp.com", projectId: "laylahomeschool-77ac4", storageBucket: "laylahomeschool-77ac4.firebasestorage.app", messagingSenderId: "491842629315", appId: "1:491842629315:web:8644c66d1cde1b734fbc76" };
+        appId = "laylahomeschool-77ac4";
+        try { const app = initializeApp(firebaseConfig); db = getFirestore(app); } catch (e) { alert("Could not connect to the database."); }
+
+        document.getElementById('load-data-btn').addEventListener('click', async () => {
+            const trackingId = document.getElementById('tracking-id-input').value.trim();
+            if (!trackingId) { alert("Please enter a Tracking ID."); return; }
+            currentTrackingId = trackingId;
+            document.getElementById('dashboard-content').classList.remove('hidden');
+            const progressRef = doc(db, `artifacts/${appId}/users/${trackingId}`);
+            const docSnap = await getDoc(progressRef);
+            progressData = docSnap.exists() ? docSnap.data() : {};
+            renderDashboard();
+        });
+
+        function renderDashboard() {
+            const totalStars = Object.values(progressData).reduce((sum, item) => sum + (item.stars || 0), 0);
+            document.getElementById('total-stars-display').textContent = totalStars;
+
+            const container = document.getElementById('progress-report-container');
+            container.innerHTML = '';
+            for (const grade in curriculumData) {
+                let gradeHtml = `<div class="bg-white p-4 rounded-lg shadow"><h3 class="text-2xl font-bold text-sky-700 mb-4">${grade}${grade === '1' ? 'st' : 'nd'} Grade Progress</h3>`;
+                for (const subjectKey in curriculumData[grade]) {
+                    const subject = curriculumData[grade][subjectKey];
+                    const allItems = subject.units.flatMap(u => u.items);
+                    const completedItems = allItems.filter(item => progressData[item.id]?.completed).length;
+                    const progressPercent = allItems.length > 0 ? Math.round((completedItems / allItems.length) * 100) : 0;
+                    gradeHtml += `<div class="mb-4"><div class="flex justify-between items-center mb-1"><h4 class="font-bold text-lg capitalize">${subjectKey}</h4><span class="font-semibold">${progressPercent}% Complete</span></div>
+                    <div class="w-full bg-gray-200 rounded-full h-4"><div class="bg-green-500 h-4 rounded-full" style="width: ${progressPercent}%"></div></div><ul class="mt-2 space-y-1 text-sm list-disc list-inside">`;
+                    subject.units.forEach(unit => {
+                        unit.items.forEach(item => {
+                            const p = progressData[item.id];
+                            if (p?.completed) {
+                                const scoreInfo = p.score !== undefined ? `(${p.score}/${p.total})` : `⭐${p.stars || 0}`;
+                                gradeHtml += `<li class="text-gray-600"><span class="text-green-500 font-bold">✔</span> ${item.title} ${scoreInfo}</li>`;
+                            }
+                        });
+                    });
+                    gradeHtml += `</ul></div>`;
+                }
+                gradeHtml += `</div>`;
+                container.innerHTML += gradeHtml;
+            }
+        }
     </script>
 </body>
 </html>
+
+
