--- a/index.html
+++ b/index.html
@@ -45,8 +45,17 @@
         <div id="galaxy-map-screen">
             <h2 class="text-4xl font-bold mb-12">Choose Your Planet!</h2>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-16">
-                <div id="grade-1-planet" class="planet text-center"><img src="https://www.gstatic.com/earth/images/stock/v2/transparent_blue_marble_1280.png" alt="1st Grade Planet Earth" class="w-48 h-48 sm:w-64 sm:h-64"><p class="text-3xl font-bold mt-4">Planet G1</p><p class="text-lg">First Grade</p></div>
-                <div id="grade-2-planet" class="planet locked text-center"><img src="https://www.gstatic.com/earth/images/stock/v2/transparent_red_marble_1280.png" alt="2nd Grade Planet Mars" class="w-48 h-48 sm:w-64 sm:h-64"><p class="text-3xl font-bold mt-4">Planet G2</p><p id="grade-2-lock-text" class="text-lg">Second Grade 🔒</p></div>
+<div id="grade-1-planet" class="planet text-center">
+    <img src="https://placehold.co/256x256/3b82f6/FFFFFF?text=G1&font=balsamiq" alt="1st Grade Planet" class="w-48 h-48 sm:w-64 sm:h-64 rounded-full">
+    <p class="text-3xl font-bold mt-4">Planet G1</p>
+    <p class="text-lg">First Grade</p>
+</div>
+<div id="grade-2-planet" class="planet locked text-center">
+    <img src="https://placehold.co/256x256/ef4444/FFFFFF?text=G2&font=balsamiq" alt="2nd Grade Planet" class="w-48 h-48 sm:w-64 sm:h-64 rounded-full">
+    <p class="text-3xl font-bold mt-4">Planet G2</p>
+    <p id="grade-2-lock-text" class="text-lg">Second Grade 🔒</p>
+</div>
+
             </div>
         </div>
         <div id="subject-screen" hidden>
