--- a/parent-dashboard.html
+++ b/parent-dashboard.html
@@ -6,18 +6,27 @@
     <title>Parent Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <style> body { font-family: 'Inter', sans-serif; } </style>
+    <style>
+        body { font-family: 'Inter', sans-serif; }
+        .collapsible-content { max-height: 0; overflow: hidden; transition: max-height 0.3s ease-out; }
+        .collapsible-content.expanded { max-height: 2000px; } /* Increased max-height */
+        .collapsible-trigger svg { transition: transform 0.3s; }
+        .collapsible-trigger.expanded svg { transform: rotate(180deg); }
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
 
     <header class="bg-white shadow-sm">
-        <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8"><h1 class="text-2xl sm:text-3xl font-bold text-gray-900">Layla's Homeschool Dashboard</h1></div>
+        <div class="max-w-7xl mx-auto py-4 px-4 sm:px-6 lg:px-8 flex justify-between items-center">
+            <h1 class="text-2xl sm:text-3xl font-bold leading-tight text-gray-900">Layla's Homeschool Dashboard</h1>
+            <a href="./index.html" class="text-indigo-600 hover:text-indigo-800 font-semibold">← Back to Hub</a>
+        </div>
     </header>
 
     <main class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
         <div class="bg-white p-4 sm:p-6 rounded-lg shadow mb-8">
             <h2 class="text-xl sm:text-2xl font-bold mb-4">Track Progress</h2>
-            <p class="text-gray-600 mb-4">Enter Layla's Tracking ID to load her progress.</p>
+            <p class="text-gray-600 mb-4">Enter Layla's Tracking ID to load her progress and schedule.</p>
             <div class="flex flex-col sm:flex-row items-center gap-2">
                 <input type="text" id="tracking-id-input" placeholder="Enter Tracking ID..." class="w-full p-3 border border-gray-300 rounded-md focus:ring-indigo-500 focus:border-indigo-500">
                 <button id="load-data-btn" class="w-full sm:w-auto bg-indigo-600 text-white font-semibold py-3 px-6 rounded-md hover:bg-indigo-700">Load Data</button>
@@ -25,63 +34,16 @@
         </div>
 
         <div id="dashboard-content" class="hidden">
-            <div class="mb-8"><h2 class="text-xl sm:text-2xl font-bold mb-4">Overall Engagement</h2><div class="bg-white p-6 rounded-lg shadow text-center"><h3 class="text-lg font-medium text-gray-500">Total Stars Earned</h3><p id="total-stars-display" class="text-6xl font-bold text-yellow-500">0</p></div></div>
-            <div class="mb-8"><h2 class="text-xl sm:text-2xl font-bold mb-4">Progress Report</h2><div id="progress-report-container" class="space-y-6"></div></div>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-8">
+                <div class="bg-white p-6 rounded-lg shadow text-center"><h3 class="text-lg font-medium text-gray-500">Total Stars Earned</h3><p id="total-stars-display" class="text-6xl font-bold text-yellow-500">0</p></div>
+                <div class="bg-white p-6 rounded-lg shadow text-center"><h3 class="text-lg font-medium text-gray-500">1st Grade Completion</h3><p id="grade-1-progress-display" class="text-6xl font-bold text-sky-600">0%</p></div>
+            </div>
+            <div class="mb-8"><h2 class="text-2xl font-bold mb-4">Detailed Progress Report</h2><div id="progress-report-container" class="space-y-2"></div></div>
+            <div class="mb-8"><div class="flex flex-col sm:flex-row justify-between sm:items-center mb-4 gap-4"><h2 class="text-2xl font-bold">Weekly Planner</h2><button id="save-schedule-btn" class="w-full sm:w-auto bg-green-600 text-white font-semibold py-3 px-5 rounded-md hover:bg-green-700">Save Schedule</button></div><div id="schedule-container" class="bg-white p-6 rounded-lg shadow grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div><p id="save-feedback" class="text-center mt-4 text-lg text-green-700 font-medium"></p></div>
+            <div class="bg-red-50 border-l-4 border-red-400 p-4 rounded-md mt-12"><div class="flex"><div class="flex-shrink-0"><svg class="h-5 w-5 text-red-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.21 3.03-1.742 3.03H4.42c-1.532 0-2.492-1.696-1.742-3.03l5.58-9.92zM10 13a1 1 0 110-2 1 1 0 010 2zm-1.75-5.25a.75.75 0 00-1.5 0v3.5a.75.75 0 001.5 0v-3.5z" clip-rule="evenodd" /></svg></div><div class="ml-3"><h3 class="text-lg font-medium text-red-800">Danger Zone</h3><div class="mt-2 text-sm text-red-700"><p>This will permanently delete all of Layla's progress for a specific grade. This cannot be undone.</p></div><div class="mt-4 flex gap-4"><button data-grade="1" class="clear-progress-btn bg-red-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-red-700">Clear 1st Grade</button><button data-grade="2" class="clear-progress-btn bg-red-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-red-700">Clear 2nd Grade</button></div></div></div></div>
         </div>
     </main>
-
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-        import { curriculumData } from './curriculum.js';
-
-        let db, appId, currentTrackingId, progressData = {};
-        const firebaseConfig = { apiKey: "AIzaSyAfatIGx88HP1fH0_EGTr_zHpvNa1Rcg7k", authDomain: "laylahomeschool-77ac4.firebaseapp.com", projectId: "laylahomeschool-77ac4", storageBucket: "laylahomeschool-77ac4.firebasestorage.app", messagingSenderId: "491842629315", appId: "1:491842629315:web:8644c66d1cde1b734fbc76" };
-        appId = "laylahomeschool-77ac4";
-        try { const app = initializeApp(firebaseConfig); db = getFirestore(app); } catch (e) { alert("Could not connect to the database."); }
-
-        document.getElementById('load-data-btn').addEventListener('click', async () => {
-            const trackingId = document.getElementById('tracking-id-input').value.trim();
-            if (!trackingId) { alert("Please enter a Tracking ID."); return; }
-            currentTrackingId = trackingId;
-            document.getElementById('dashboard-content').classList.remove('hidden');
-            const progressRef = doc(db, `artifacts/${appId}/users/${trackingId}`);
-            const docSnap = await getDoc(progressRef);
-            progressData = docSnap.exists() ? docSnap.data() : {};
-            renderDashboard();
-        });
-
-        function renderDashboard() {
-            const totalStars = Object.values(progressData).reduce((sum, item) => sum + (item.stars || 0), 0);
-            document.getElementById('total-stars-display').textContent = totalStars;
-
-            const container = document.getElementById('progress-report-container');
-            container.innerHTML = '';
-            for (const grade in curriculumData) {
-                let gradeHtml = `<div class="bg-white p-4 rounded-lg shadow"><h3 class="text-2xl font-bold text-sky-700 mb-4">${grade}${grade === '1' ? 'st' : 'nd'} Grade Progress</h3>`;
-                for (const subjectKey in curriculumData[grade]) {
-                    const subject = curriculumData[grade][subjectKey];
-                    const allItems = subject.units.flatMap(u => u.items);
-                    const completedItems = allItems.filter(item => progressData[item.id]?.completed).length;
-                    const progressPercent = allItems.length > 0 ? Math.round((completedItems / allItems.length) * 100) : 0;
-                    gradeHtml += `<div class="mb-4"><div class="flex justify-between items-center mb-1"><h4 class="font-bold text-lg capitalize">${subjectKey}</h4><span class="font-semibold">${progressPercent}% Complete</span></div>
-                    <div class="w-full bg-gray-200 rounded-full h-4"><div class="bg-green-500 h-4 rounded-full" style="width: ${progressPercent}%"></div></div><ul class="mt-2 space-y-1 text-sm list-disc list-inside">`;
-                    subject.units.forEach(unit => {
-                        unit.items.forEach(item => {
-                            const p = progressData[item.id];
-                            if (p?.completed) {
-                                const scoreInfo = p.score !== undefined ? `(${p.score}/${p.total})` : `⭐${p.stars || 0}`;
-                                gradeHtml += `<li class="text-gray-600"><span class="text-green-500 font-bold">✔</span> ${item.title} ${scoreInfo}</li>`;
-                            }
-                        });
-                    });
-                    gradeHtml += `</ul></div>`;
-                }
-                gradeHtml += `</div>`;
-                container.innerHTML += gradeHtml;
-            }
-        }
-    </script>
+    <script type="module" src="./dashboard.js"></script>
 </body>
 </html>
 
