--- a/index.html
+++ b/index.html
@@ -7,36 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.js"></script>
-    <style>
-        body { font-family: 'Balsamiq Sans', cursive; background-color: #0c0a1e; background-image: radial-gradient(circle at top right, #4a0e76, transparent 40%), radial-gradient(circle at bottom left, #0e2a76, transparent 40%), url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 100 100"%3E%3Cg fill="%231a1a3d" fill-opacity="0.6"%3E%3Ccircle cx="50" cy="50" r="1"/%3E%3Ccircle cx="10" cy="10" r="1"/%3E%3Ccircle cx="30" cy="30" r="1"/%3E%3Ccircle cx="70" cy="70" r="1"/%3E%3Ccircle cx="90" cy="90" r="1"/%3E%3Ccircle cx="10" cy="50" r="1"/%3E%3Ccircle cx="50" cy="10" r="1"/%3E%3Ccircle cx="90" cy="50" r="1"/%3E%3Ccircle cx="50" cy="90" r="1"/%3E%3Ccircle cx="30" cy="90" r="1"/%3E%3Ccircle cx="10" cy="70" r="1"/%3E%3Ccircle cx="70" cy="10" r="1"/%3E%3Ccircle cx="90" cy="30" r="1"/%3E%3C/g%3E%3C/svg%3E'); -webkit-touch-callout: none; -webkit-user-select: none; user-select: none; }
-        .focus-ring:focus { outline: none; box-shadow: 0 0 0 4px rgba(251, 191, 36, 0.7); }
-        .modal { display: none; visibility: hidden; opacity: 0; transition: visibility 0s 0.3s, opacity 0.3s; position: fixed; inset: 0; z-index: 1000; display: flex; items-center; justify-content: center; padding: 1rem; }
-        .modal.is-open { visibility: visible; opacity: 1; transition: visibility 0s, opacity 0.3s; }
-        .modal-content { transition: transform 0.3s, opacity 0.3s; transform: scale(0.95); opacity: 0; background: white; color: #333; border-radius: 1.5rem; box-shadow: 0 25px 50px -12px rgba(0,0,0,0.25); position: relative; display: flex; flex-direction: column; width: 100%; max-width: 800px; max-height: 90vh; }
-        .modal.is-open .modal-content { transform: scale(1); opacity: 1; }
-        .unit-item { transition: all 0.2s; border: 2px solid #4A5568; }
-        .unit-item.completed { background: linear-gradient(to right, #22c55e, #16a34a); color: white; border-color: #16a34a; }
-        .unit-item.locked { background-color: #4b5563; color: #9ca3af; cursor: not-allowed; border-color: #374151; }
-        .planet { transition: transform 0.3s ease-in-out, filter 0.3s; cursor: pointer; position: relative; }
-        .planet:hover:not(.locked) { transform: scale(1.1); filter: drop-shadow(0 0 20px rgba(255,255,255,0.8)); }
-        .planet.locked { filter: grayscale(100%) brightness(0.5); cursor: not-allowed; }
-        #sparky { position: fixed; bottom: 10px; right: 10px; width: 100px; z-index: 100; transition: transform 0.3s; }
-        #sparky:hover { transform: scale(1.1) rotate(5deg); }
-        #sparky-bubble { position: absolute; bottom: 110px; right: 0; background-color: white; color: #333; padding: 10px 15px; border-radius: 20px; width: 200px; opacity: 0; visibility: hidden; transition: opacity 0.3s, transform 0.3s; transform: translateY(10px); box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
-        #sparky-bubble.show { opacity: 1; visibility: visible; transform: translateY(0); }
-        .star-burst::after { content: '⭐'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); animation: star-burst 0.6s ease-out forwards; }
-        @keyframes star-burst { 0% { transform: translate(-50%, -50%) scale(0); opacity: 1; } 100% { transform: translate(-50%, -150%) scale(1.5); opacity: 0; } }
-        .draggable { cursor: grab; touch-action: none; transition: transform 0.2s; }
-        .dragging { transform: scale(1.1); box-shadow: 0 10px 15px rgba(0,0,0,0.2); z-index: 100; }
-        [hidden] { display: none !important; }
-    </style>
+    <link rel="stylesheet" href="style.css"> <!-- Link to the new CSS file -->
 </head>
 <body class="text-white">
 
     <header id="main-header" class="p-4 flex justify-between items-center bg-black bg-opacity-20 backdrop-blur-sm sticky top-0 z-50">
         <h1 id="header-title" class="text-2xl font-bold">Learning Galaxy</h1>
         <div class="flex items-center gap-4">
-            <p id="auth-status" class="text-sm text-gray-300"></p>
+            <p id="auth-status" class="text-sm text-gray-300 hidden md:block"></p>
             <div id="star-counter" class="bg-yellow-400 text-black font-bold text-xl px-4 py-2 rounded-full flex items-center gap-2">
                 <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor"><path d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"/></svg>
                 <span id="star-total">0</span>
@@ -48,7 +26,7 @@
         <div id="galaxy-map-screen">
             <h2 class="text-4xl font-bold mb-12 animate-pulse">Choose Your Planet!</h2>
             <div class="flex flex-col sm:flex-row justify-center items-center gap-16">
-                <div id="grade-1-planet" class="planet text-center">
+                 <div id="grade-1-planet" class="planet text-center">
                     <div class="w-48 h-48 sm:w-64 sm:h-64"><svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><defs><radialGradient id="g1-glow" cx="50%" cy="50%" r="50%" fx="30%" fy="30%"><stop offset="0%" style="stop-color: #a7d7ff;" /><stop offset="100%" style="stop-color: #3b82f6;" /></radialGradient></defs><circle cx="50" cy="50" r="50" fill="url(#g1-glow)"/><path d="M 20,50 a 30,30 0 0,1 40,20 a 15,15 0 0,0 -10,-15 a 25,25 0 0,1 -20,-10 Z" fill="#22c55e" opacity="0.8"/><path d="M 70,30 a 25,25 0 0,1 10,40 a 10,10 0 0,0 -15,-5 a 20,20 0 0,1 -5,-20 Z" fill="#16a34a" opacity="0.8"/></svg></div>
                     <p class="text-3xl font-bold mt-4">Planet G1</p><p class="text-lg">First Grade</p>
                 </div>
@@ -59,7 +37,7 @@
             </div>
         </div>
         <div id="subject-screen" hidden>
-            <div id="daily-plan-container" class="bg-purple-900 bg-opacity-50 p-4 rounded-lg mb-6 text-left hidden"><h3 class="font-bold text-lg text-yellow-300">🚀 Today's Mission:</h3><p id="daily-plan-text" class="text-lg"></p></div>
+            <div id="daily-plan-container" class="bg-purple-900 bg-opacity-50 p-4 rounded-lg mb-6 text-left hidden"><h3 class="font-bold text-lg text-yellow-300">🚀 Today's Mission:</h3><p id="daily-plan-text" class="text-lg whitespace-pre-wrap"></p></div>
             <header class="flex items-center justify-between mb-6"><button id="back-to-galaxy" class="bg-white bg-opacity-20 p-3 rounded-full shadow hover:bg-opacity-30 focus-ring"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></button><h1 id="subject-header" class="text-3xl sm:text-4xl font-bold text-center"></h1><div class="w-12"></div></header>
             <div id="subject-tabs" class="flex justify-center flex-wrap gap-2 mb-6"></div>
             <div id="unit-container" class="space-y-4 text-left"></div>
@@ -68,9 +46,9 @@
     <div id="activity-modal" class="modal"><div class="modal-content"><button id="close-modal" class="absolute top-2 right-3 text-3xl sm:text-4xl font-bold text-gray-400 hover:text-gray-600 z-10">&times;</button><div id="modal-body" class="p-2 sm:p-4 flex-grow overflow-y-auto"></div></div></div>
     <div id="sparky"><div id="sparky-bubble">Hi, I'm Sparky!</div><svg viewBox="0 0 100 100" id="sparky-svg"><defs><radialGradient id="grad1" cx="50%" cy="50%" r="50%" fx="50%" fy="50%"><stop offset="0%" stop-color="rgb(220,220,255)"/><stop offset="100%" stop-color="rgb(150,150,200)"/></radialGradient></defs><circle cx="50" cy="65" r="35" fill="url(#grad1)" stroke="#555" stroke-width="2"/><rect x="35" y="98" width="30" height="2" fill="#777"/><circle cx="50" cy="35" r="25" fill="#eef" stroke="#555" stroke-width="2"/><circle id="sparky-eye" cx="50" cy="35" r="10" fill="#33c"/><circle cx="50" cy="35" r="3" fill="white"/><path d="M 40 10 L 60 10" stroke="#777" stroke-width="3" stroke-linecap="round"/></svg></div>
     <footer class="text-center p-4 mt-4"><a href="./parent-dashboard.html" class="text-sm text-gray-400 hover:text-white transition">Parent Dashboard</a></footer>
+    
     <script type="module" src="./script.js"></script>
 </body>
 </html>
-
 
 
